--- a/TrafficLightController/TrafficLightController.ioc
+++ b/TrafficLightController/TrafficLightController.ioc
@@ -8,10 +8,20 @@ Mcu.IP2=SYS
 Mcu.IPNb=3
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PA13
-Mcu.Pin1=PA14
-Mcu.Pin2=VP_SYS_VS_Systick
-Mcu.PinsNb=3
+Mcu.Pin0=PE3
+Mcu.Pin1=PE4
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin2=PE5
+Mcu.Pin3=PC2
+Mcu.Pin4=PC4
+Mcu.Pin5=PB2
+Mcu.Pin6=PB14
+Mcu.Pin7=PB15
+Mcu.Pin8=PD12
+Mcu.Pin9=PD13
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -19,6 +29,8 @@ MxCube.Version=5.1.0
 MxDb.Version=DB.5.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -31,6 +43,27 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=RED_LAMP
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=BUTTON2
+PB15.Locked=true
+PB15.Signal=GPXTI15
+PB2.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PB2.GPIO_Label=BUTTON1
+PB2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB2.Locked=true
+PB2.Signal=GPXTI2
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=YELLOW_LAMP
+PC2.Locked=true
+PC2.Signal=GPIO_Output
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=GREEN_LAMP
+PC4.Locked=true
+PC4.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F407/417
 PCC.MCU=STM32F407V(E-G)Tx
@@ -39,6 +72,26 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.3
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=WALK
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=DONT_WALK
+PD13.Locked=true
+PD13.Signal=GPIO_Output
+PE3.GPIOParameters=GPIO_Label
+PE3.GPIO_Label=MODE_SW
+PE3.Locked=true
+PE3.Signal=GPIO_Input
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=WALK_INTERVAL
+PE4.Locked=true
+PE4.Signal=GPIO_Input
+PE5.GPIOParameters=GPIO_Label
+PE5.GPIO_Label=OUT_OF_SERVICE
+PE5.Locked=true
+PE5.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -87,6 +140,10 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
